[Misc] Migrate xwiki-platform-eventstream-default to JUnit 5